fix(image): fix exception handling